--- a/views/index.html
+++ b/views/index.html
@@ -150,7 +150,9 @@
 
 		<input id="jsonConverter" type="text" name="_jsonConverter" hidden="true" value='<%= _jsonConverter %>'>
 
-</section>
+	</section>
+
+	<iframe id="eofbot" src="chatbot.html" width="300" height="500px"></iframe>
 
 	<footer class="fluid-container">
 		<div class="row-12">
