--- a/views/register.html
+++ b/views/register.html
@@ -132,7 +132,21 @@
 			        <label>Password:</label>
 			        <input type="password" name="password"/>
 							<span class="error">Fill in a password</span>
-
+			    </div>
+			    <div>
+			        <label>Organisation:</label>
+			        <input type="text" name="organisation"/>
+							<span class="error">Fill in a organisation</span>
+			    </div>
+			    <div>
+			        <label>License:</label>
+			        <input type="text" name="license"/>
+							<span class="error">Fill in a type of license</span>
+			    </div>
+			    <div>
+			        <label>Date :</label>
+			        <input type="text" name="date"/>
+							<span class="error">Fill in a starting date</span>
 			    </div>
 					<div>
 						<input type="submit" value="<% if (typeof lang == 'undefined' || lang == 'en') { %>Send<% } else if (lang == 'nl') { %>Verzenden<% } %>" >
