--- a/public/style/style.css
+++ b/public/style/style.css
@@ -738,6 +738,7 @@ border-bottom:1px solid #ccc;
 
 .shortForm.question_delete_form {
 	max-width:100%;
+	position: initial;
 }
 .questionForm {
 	max-width:80%;
@@ -793,6 +794,65 @@ border-bottom:1px solid #ccc;
 	top: 0;
 	right: 0;
 }
+
+.question_edit_form input[name=question_title],
+.question_edit_form input[name=question_title_nl] {
+	display:inline-block;
+	width:49%;
+}
+.faq_edit_button{
+	height: 30px;
+	width:30px;
+	background-color: #633689;
+	color: #fff;
+	border-radius: 6px;
+	display: inline-block;
+	line-height: 30px;
+	padding-left:3px;
+	border: 0;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 14px;
+	font-weight: 600;
+	transition: .3s ease all;
+	text-align: center;
+	position: absolute;
+	right: 36px;
+}
+.question_edit_form input {
+	text-align:center;
+	margin-bottom:.5em;
+}
+.question_edit_form {
+	display:none;
+  padding-top: 2em;
+}
+.question_edit_form textarea {
+	background:#35B297;
+	color:#fff;
+	text-align:center;
+	padding:1em;
+	line-height:1em;
+	margin-bottom:.5em;
+}
+.question_edit_form input[type=submit]{
+  height: 42px;
+  background-color: #633689;
+  color: #fff;
+  border-radius: 6px;
+  display: inline-block;
+  line-height: 42px;
+  border: 0;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 0 20px;
+  transition: .3s ease all;
+  margin-left: 20px;
+  text-align: center;
+}
+
 
 #faqform {
 	margin-top:3rem;
@@ -1071,8 +1131,14 @@ input[type="checkbox"] label[for="replaceFile"] {
 .row.intro .ql-container {
 	height:300px;
 }
-
-
+#eofbot {
+	background:#fff;
+	display:block;
+	position: fixed;
+	right:20px;
+	bottom:20px;
+	z-index:1000;
+}
 
 /* //// RESPONSIVE STYLE */
 /* // Extra small devices (portrait phones, less than 576px)
