--- a/views/about.html
+++ b/views/about.html
@@ -63,18 +63,24 @@
 						<nav id="mainmenu">
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-								  <li><a href="/home">Home</a></li>
+									<li><a href="/home">Home</a></li>
 									<li><a href="/blog">News</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li><a href="/login">Login</a></li>
+										<li>
+											<a href="/register">Buy</a>
+										</li>
+										<li>
+											<a href="/login">Login</a>
+										</li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
 									<% } %>
-								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Terms & Conditions</a></li>
 								<% } else if (lang == 'nl') { %>
-								  <li><a href="/home">Home</a></li>
+									<li><a href="/home">Home</a></li>
 									<li><a href="/blog">Nieuws</a></li>
 									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
@@ -82,7 +88,7 @@
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
-								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/about">E-Office</a></li>
 									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
