--- a/views/admin.html
+++ b/views/admin.html
@@ -30,11 +30,40 @@
 					<a id="hamburger" href="#mainmenu"></a>
 					<nav id="mainmenu">
 						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="/register">Register</a></li>
-							<li><a href="/downloads">Downloads</a></li>
-							<li><a href="/news">News</a></li>
-							<li class="english"><a href="/translate">EN</a></li>
+							<% if (typeof lang == 'undefined' || lang == 'en') { %>
+							  <li><a href="/home">Home</a></li>
+								<li><a href="/blog">News</a></li>
+								<li><a href="/faq">F.A.Q</a></li>
+								<% if (!username) { %>
+									<li>
+										<a href="/register">Buy</a>
+									</li>
+									<li>
+										<a href="/login">Login</a>
+									</li>
+								<% } else if (username) { %>
+									<li><a href="/downloads">Downloads</a></li>
+									<li><a href="/service_request">Service Request</a></li>
+								<% } %>
+							  <li><a href="/about">E-Office</a></li>
+								<li><a href="/terms">Terms & Conditions</a></li>
+							<% } else if (lang == 'nl') { %>
+							  <li><a href="/home">Home</a></li>
+								<li><a href="/blog">Nieuws</a></li>
+								<li><a href="/faq">F.A.Q</a></li>
+								<% if (!username) { %>
+									<li><a href="/login">Login</a></li>
+								<% } else if (username) { %>
+									<li><a href="/downloads">Downloads</a></li>
+								<% } %>
+							  <li><a href="/about">E-Office</a></li>
+								<li><a href="/terms">Algemene voorwaarde</a></li>
+							<% } %>
+							<% if (typeof lang == 'undefined' || lang == 'en') { %>
+								<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
+							<% } else if (lang == 'nl') { %>
+								<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
+							<% } %>
 						</ul>
 					</nav>
 				</div>
