--- a/views/index.html
+++ b/views/index.html
@@ -67,9 +67,15 @@
 							<li><a href="/blog">News</a></li>
 							<li><a href="/faq">F.A.Q</a></li>
 							<% if (!username) { %>
-								<li><a href="/login">Login</a></li>
+								<li>
+									<a href="/register">Buy</a>
+								</li>
+								<li>
+									<a href="/login">Login</a>
+								</li>
 							<% } else if (username) { %>
 								<li><a href="/downloads">Downloads</a></li>
+								<li><a href="/service_request">Service Request</a></li>
 							<% } %>
 						  <li><a href="/about">E-Office</a></li>
 							<li><a href="/terms">Terms & Conditions</a></li>
