--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1178,6 +1178,24 @@ input[type="checkbox"] label[for="replaceFile"] {
 	#wrap > header + .fluid-container {
 			min-height: 500px;
 	}
+	#mainmenu ul li.lang {
+		position: absolute;
+		display: block;
+		right: -1px;
+		top: 9px;
+	}
+	div.login {
+		position: absolute;
+		right: 0;
+		top: 48px;
+	}
+	#logoutButton {
+		margin-right: 0;
+	}
+	#mainmenu ul {
+		padding-right:2.5em;
+		margin-top:0;
+	}
 }
 
 @media (max-width: 992px) {
@@ -1195,7 +1213,7 @@ input[type="checkbox"] label[for="replaceFile"] {
 
 /* // Medium devices (tablets, 980px and up) */
 @media screen and (max-width: 991px) and (min-width: 769px) {
-	#mainmenu ul li.lang {
+	/* #mainmenu ul li.lang {
 		position: absolute;
 		display: block;
 		right: -1px;
@@ -1212,7 +1230,7 @@ input[type="checkbox"] label[for="replaceFile"] {
 	#mainmenu ul {
 		padding-right:2.5em;
 		margin-top:0;
-	}
+	} */
 }
 /* // Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
