--- a/views/index.html
+++ b/views/index.html
@@ -158,7 +158,7 @@
 
 	</section>
 
-	<iframe id="eofbot" src="chatbot.html" width="300" height="500px"></iframe>
+	<!-- <iframe id="eofbot" src="chatbot.html" width="300" height="500px"></iframe> -->
 
 	<footer class="fluid-container">
 		<div class="row-12">
