Added dutch and english chatbot , still needs configuration

--- a/views/login.html
+++ b/views/login.html
@@ -120,7 +120,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12" style="text-align:center;">
 			<h2>Login</h2>
 			<br>
 			<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -196,28 +196,6 @@ $( document ).ready(function() {
 		}
 	});
 
-	// trigger upload on space & enter
-	// = standard button functionality
-	$('#buttonlabel span[role=button]').bind('keypress keyup', function(e) {
-	  if(e.which === 32 || e.which === 13){
-	    e.preventDefault();
-	    $('#fileupload').click();
-	  }
-	});
-
-	// return chosen filename to additional input
-	$('#fileupload').change(function(e) {
-	  var filename = $('#fileupload').val().split('\\').pop();
-	  $('#filename').val(filename);
-	  $('#filename').attr('placeholder', filename);
-	  $('#filename').focus();
-	});
-
-
-
-
-
-	//
 });
 </script>
 </body>
