--- a/views/toc.html
+++ b/views/toc.html
@@ -117,7 +117,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12" style="text-align:center;">
 			<h2>
 				<% if (typeof lang == 'undefined' || lang == 'en') { %>
 					Welcome, to the user configuration page !	<br>
@@ -184,7 +184,7 @@
 				<% } %>
 			</dl>
 		</div>
-		<div class="col-12 list_all_users">
+		<div class="col-12 list_all_users" style="text-align:center;">
 			<% if (admin) { %>
 				<% for(var i=0; i < userRows.length; i++) { %>
 					<dl class="dl-horizontal">
