--- a/views/admin.html
+++ b/views/admin.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Favorites Organizer powered by Cloudant</title>
+	<!-- //Favicon tags -->
+	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
+	<title><%= title %></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -9,6 +28,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/style/style.css" />
 	<link rel="stylesheet" href="/css/jquery.mmenu.all.css"/>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.mmenu.all.js"></script>
@@ -17,176 +37,159 @@
 <body>
 	<div id="wrap">
 
-	<header class = "fluid-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-1 mr-auto">
-					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<img class="newappIcon" src="images/talkteam_logo.png">
-					<!-- <p class = "appTitle">
-					</p> -->
-				</div>
-				<div class="col-2 col-sm-10 col-xs-10 col-auto">
-					<a id="hamburger" href="#mainmenu"></a>
-					<nav id="mainmenu">
-						<ul>
-							<% if (typeof lang == 'undefined' || lang == 'en') { %>
-							  <li><a href="/home">Home</a></li>
-								<li><a href="/blog">News</a></li>
-								<li><a href="/faq">F.A.Q</a></li>
-								<% if (!username) { %>
-									<li>
-										<a href="/register">Buy</a>
-									</li>
-									<li>
-										<a href="/login">Login</a>
-									</li>
-								<% } else if (username) { %>
-									<li><a href="/downloads">Downloads</a></li>
-									<li><a href="/service_request">Service Request</a></li>
+		<header class = "fluid-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-3 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+						<a class="logo" href="/">
+							<img class="newappIcon" src="images/talkteam_logo1.png">
+						</a>
+					</div>
+					<div class="col-2 col-sm-9 col-xs-9 col-auto">
+						<% if (typeof lang == 'undefined' || lang == 'en') { %>
+						<div class="mobile-lang">
+							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+						</div>
+						<% } else if (lang == 'nl') { %>
+							<div class="mobile-lang">
+								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+							</div>
+						<% } %>
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">News</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li>
+											<a href="/register">Buy</a>
+										</li>
+										<li>
+											<a href="/login">Login</a>
+										</li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+										<li><a href="/service_request">Service Request</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Terms & Conditions</a></li>
+								<% } else if (lang == 'nl') { %>
+								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li><a href="/login">Login</a></li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
-							  <li><a href="/about">E-Office</a></li>
-								<li><a href="/terms">Terms & Conditions</a></li>
-							<% } else if (lang == 'nl') { %>
-							  <li><a href="/home">Home</a></li>
-								<li><a href="/blog">Nieuws</a></li>
-								<li><a href="/faq">F.A.Q</a></li>
-								<% if (!username) { %>
-									<li><a href="/login">Login</a></li>
-								<% } else if (username) { %>
-									<li><a href="/downloads">Downloads</a></li>
+								<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
+								<% } else if (lang == 'nl') { %>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
 								<% } %>
-							  <li><a href="/about">E-Office</a></li>
-								<li><a href="/terms">Algemene voorwaarde</a></li>
+							</ul>
+						</nav>
+						<div class="login">
+							<% if (username) { %>
+								<a id="logoutButton" href="/logout" style="margin-right: -4px">Logout</a>
 							<% } %>
-							<% if (typeof lang == 'undefined' || lang == 'en') { %>
-								<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
-							<% } else if (lang == 'nl') { %>
-								<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
+							<% if (!username) { %>
+								<a id="loginButton" href="/login">Login</a>
 							<% } %>
-						</ul>
-					</nav>
+						</div>
+					</div>
 				</div>
-				<!-- <div class = "banner">
-				</div> -->
 			</div>
-		</div>
+		</header>
 
-</header>
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/bannerblurred.png">
+			<!-- <img class="bannerimg"   src="images/silhoutte2.jpg"> -->
+			<img class="bannerimg" style="visibility: hidden" src="images/apples-talkteam.png">
+
 		</div>
 	</div>
 </div>
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
-			<h2>
-				ADMINPAGE - TESTSUITE
-			</h2>
-			<p>
-				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
-			</p>
-			<h3>
-				meetings will be nice and smart
-			</h3>
-			<p>
-				Talk Team supports meeting preparations, the meetings themselves and the follow-up of action points. With TalkTeam, participants are directly involved in the agenda and meeting documents. By preparing your meetings online, there is much more time for content during the actual meeting! Meetings will no longer be endless, but concrete and to the point instead.
-			</p>
-			<p>
-					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
-			</p>
-		</div>
-		<div class="col-12 purplebox">
-			<h3>
-				paperless and transparent
-			</h3>
-			<p>
-				TalkTeam is a smart addition to IBM Connections. It integrates into the company-wide social platform and enriches IBM Connections with a number of useful tools. TalkTeam offers a clear meeting structure with information from a community and presents it in a simple way. You have a clear perception of each meeting.
-			</p>
-			<p>
-				A meeting consists of a number of participants. TalkTeam offers the possibility to organize a single meeting or a recurring meeting with a team. TalkTeam also shows your meeting directly on your calendar.
-			</p>
-			<p>
-				Participants can add agenda items and documents, and have the opportunity to take notes. During the meeting the agenda items are being discussed and action points and decisions can be specified.
-			</p>
-			<p>
-				All information is part of the collaboration platform IBM Connections, which makes it easy for those concerned to find the information.
-			</p>
-		</div>
-		<div class="col-12">
-			<h3>
-				why do you need TalkTeam?
-			</h3>
-			<ul>
-				<li>It supports processes within a single environment</li>
-				<li>Integration with internal directory of employees</li>
-				<li>
-					Integration with calendars
-				</li>
-				<li>
-					Agreements can be directly assigned
-				</li>
-				<li>
-					It enriches your collaboration platform
-				</li>
-				<li>
-					Ability to have online and paperless meetings, including people from outside your company
-				</li>
-				<li>
-					Available on multiple devices, also as a mobile app
-				</li>
-			</ul>
-		</div>
-		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
+		<div class="col-12"  style="text-align:center;">
+			<h2>Admin</h2>
+			<form id="loginForm" class="loginForm shortForm" method="post">
+				<div>
 
+						<label>
+							<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									Username:
+								<% } else if (lang == 'nl') { %>
+									Gebruikersnaam:
+							<% } %>
+
+
+						</label>
+						<input type="text" name="username" value="">
+				</div>
+				<div>
+						<label>
+							<% if (typeof lang == 'undefined' || lang == 'en') { %>
+									Password:
+								<% } else if (lang == 'nl') { %>
+									Wachtwoord:
+							<% } %>
+						</label>
+						<input id="password-field" type="password" name="password" value="secret">
+						<div class="toggle-password">
+							<i class="fas fa-eye field-icon"></i>
+						</div>
+						<!-- <span toggle="#password-field" class="fas fa-fw fa-eye field-icon toggle-password"></span> -->
+				</div>
+				<input type="submit" name="button" value="login">
+			</form>
+		</div>
+
+	</div>
 </section>
 
 	<footer class="fluid-container">
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-		<div>
-			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
-				<img src='images/detail.png' alt='detail'/>
-
-			<button class="addBtn" onclick="addItem()" title="add record">
-				<img src="images/add.png" alt="add">
-			</button>
-			<br>
-			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
-		</div>
-		<div id='appinfo' class = 'appinfo' style='display: none;'>
-						This application helps you organize your favorite files.</br>
-						Supports all file types, like Audio, Video, Photos, Text etc.</br>
-						Click on Add icon to create a new category for your files. Provide a title and description for the category in the text fields.</br>
-						To add a file to a given category, Click on 'Browse' button to select a file, and 'Upload' button to upload the file.
-						To modify a title or description, Edit the text and press Enter.</br>
-						You can add multiple files (of any type) to a category.</br>
-						Click on <span class = 'deleteBtn' alt='delete'></span> icon to delete the category.
-		</div>
-		<div id="loadingImage"></div>
-		<br><br><br><br><br>
-		<div id="errorDiv" class='errorMsg'></div>
 	</footer>
-	<script type="text/javascript" src="/scripts/util.js"></script>
-	<script type="text/javascript" src="/scripts/index.js"></script>
-	<div id="myImage"><div id="innerImg"></div></div>
-	<br><br><br>
-	</div>
 </div>
-	<script type="text/javascript">
-	$(document).ready(function() {
-		 $("#mainmenu").mmenu({
-				// options
-		 }, {
-				 // configuration
-				 clone:	'true',
-			});
+<script type="text/javascript" src="/scripts/custom_menu.js"></script>
+<script type="text/javascript">
+$( document ).ready(function() {
+  // Handler for .ready() called.
+	$("#loginForm").submit(function(){
+		var isValid = true;
+		$( "#loginForm label + input" ).each(function() {
+			if($(this).val().trim().length == 0) {
+				isValid = false;
+			}
+		});
+		if (isValid == false) {
+			alert("Username or password is empty!");
+		}
+		return isValid;
 	});
-	</script>
+	$(".toggle-password").click(function() {
+		$(this).children('svg').toggleClass("fa-eye fa-eye-slash");
+		var input = $("#password-field");
+		if (input.attr("type") == "password") {
+			input.attr("type", "text");
+		} else {
+			input.attr("type", "password");
+		}
+	});
+
+});
+</script>
 </body>
 </html>
