--- a/views/index.html
+++ b/views/index.html
@@ -158,7 +158,13 @@
 
 	</section>
 
-	<iframe id="eofbot" src="chatbot.html" width="300" height="500px"></iframe>
+
+	<% if (typeof lang == 'undefined' || lang == 'en') { %>
+		<iframe id="eofbot" src="/chatbot_en/chatbot.html" width="300" height="500px"></iframe>
+	<% } else if (lang == 'nl') { %>
+		<iframe id="eofbot" src="/chatbot_nl/chatbot.html" width="300" height="500px"></iframe>
+	<% } %>
+
 
 	<footer class="fluid-container">
 		<div class="row-12">
