--- a/views/register.html
+++ b/views/register.html
@@ -179,6 +179,24 @@
 </div>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 	<script type="text/javascript">
+	$('#eofbot').on('load', function(){
+		var wavy = $(this).contents().find("#wavy");
+		var eofbot = $('#eofbot');
+		$(this).contents().find("#wavy").on('click', function(event) {
+			available = eofbot.contents().find(".botname span", eofbot);
+			console.log(available)
+			function toggleText() {
+				if (available[0].innerHTML === "available") {
+					available[0].innerHTML = "Chatting";
+				} else {
+					available[0].innerHTML = "available";
+				}
+			}
+			$('#eofbot').toggleClass('active');
+			toggleText();
+		});
+	});
+
 	$("#regForm").submit(function(){
 	  var isValid = true;
 		$( "#regForm label + input" ).each(function() {
