--- a/views/admin.html
+++ b/views/admin.html
@@ -195,6 +195,24 @@ $( document ).ready(function() {
 		}
 	});
 
+	$('#eofbot').on('load', function(){
+		var wavy = $(this).contents().find("#wavy");
+		var eofbot = $('#eofbot');
+		$(this).contents().find("#wavy").on('click', function(event) {
+			available = eofbot.contents().find(".botname span", eofbot);
+			console.log(available)
+			function toggleText() {
+				if (available[0].innerHTML === "available") {
+					available[0].innerHTML = "Chatting";
+				} else {
+					available[0].innerHTML = "available";
+				}
+			}
+			$('#eofbot').toggleClass('active');
+			toggleText();
+		});
+	});
+
 });
 </script>
 </body>
