--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -415,6 +415,24 @@
 		console.log($(this))
 		$(this).siblings('.extra').toggle();
 	});
+
+	$('#eofbot').on('load', function(){
+		var wavy = $(this).contents().find("#wavy");
+		var eofbot = $('#eofbot');
+		$(this).contents().find("#wavy").on('click', function(event) {
+			available = eofbot.contents().find(".botname span", eofbot);
+			console.log(available)
+			function toggleText() {
+				if (available[0].innerHTML === "available") {
+					available[0].innerHTML = "Chatting";
+				} else {
+					available[0].innerHTML = "available";
+				}
+			}
+			$('#eofbot').toggleClass('active');
+			toggleText();
+		});
+	});
 </script>
 <script src=".././lib/domJSON.js"></script>
 <script type="text/javascript" src="../scripts/admin_cm.js"></script>
