--- a/views/terms.html
+++ b/views/terms.html
@@ -172,6 +172,27 @@
 		</div>
 	</footer>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('#eofbot').on('load', function(){
+			var wavy = $(this).contents().find("#wavy");
+			var eofbot = $('#eofbot');
+			$(this).contents().find("#wavy").on('click', function(event) {
+				available = eofbot.contents().find(".botname span", eofbot);
+				console.log(available)
+				function toggleText() {
+					if (available[0].innerHTML === "available") {
+						available[0].innerHTML = "Chatting";
+					} else {
+						available[0].innerHTML = "available";
+					}
+				}
+				$('#eofbot').toggleClass('active');
+				toggleText();
+			});
+		});
+	});
+</script>
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
 <script type="text/javascript" src="/scripts/admin_cm_copy.js"></script>
