--- a/chatbot/chatbot_en/css/style.css
+++ b/chatbot/chatbot_en/css/style.css
@@ -233,6 +233,10 @@ footer {
 	height:40px;
 }
 
+#wavy {
+	cursor:pointer;
+}
+
 /* Custom, iPhone Retina */
 
 @media only screen and (min-width : 320px) {
