--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -131,8 +131,9 @@
 									<header>
 										<label for="blogpost_title">Title:</label>
 										<input type="hidden" id="blog_post_old_title" name="blogpost_old_title" value="<%= blog_posts[i].blogpost_title %>"/>
-										<input type="hidden" id="blogpost_date" name="blogpost_date" value="<%= blog_posts[i].blogpost_date %>"/>
-										<input type="hidden" id="blogpost_unique_date" name="blogpost_unique_date" value="<%= blog_posts[i].blogpost_unique_date %>"/>
+										<!-- <input type="hidden" id="blogpost_date" name="blogpost_date" value="<%= blog_posts[i].blogpost_date %>"/>
+										<input type="hidden" id="blogpost_unique_date" name="blogpost_unique_date" value="<%= blog_posts[i].blogpost_unique_date %>"/> -->
+										<!-- <input type="hidden" id="blogpost_date_format" name="blogpost_date_format" value="<%= blog_posts[i].blogpost_date_format %>"/> -->
 										<input type="text" id="blogpost_title" placeholder="<%= blog_posts[i].blogpost_title %>" name="blogpost_title"/>
 										<label for="blogpost_title_nl">Title (NL):</label>
 										<input type="text" id="blogpost_title_nl" placeholder="<%= blog_posts[i].blogpost_title_nl %>" name="blogpost_title_nl"/>
@@ -145,17 +146,17 @@
 										<label for="replaceFile"><% if (typeof lang == 'undefined' || lang == 'en') { %>Replace file <% } else if (lang == 'nl') { %>Bestand vervangen <% } %></label>
 										<input type="checkbox" name="replaceFile" value="">
 										<div class="extra">
-											<label for="blogpost_file_edit" id="buttonlabel" class="edit_blog">
-												<span role="button" aria-controls="filename_edit" tabindex="0">
+											<label for="blogpost_file_edit_<%= [i] %>" id="buttonlabel" class="edit_blog">
+												<span role="button" aria-controls="filename_edit_<%= [i] %>" tabindex="0">
 													<i class="fas fa-upload"></i><% if (typeof lang == 'undefined' || lang == 'en') { %>Choose a file..<% } else if (lang == 'nl') { %>Bestand kiezen..<% } %>
 												</span>
 											</label>
-											<input type="file" name="blogpost_file_edit" id="blogpost_file_edit">
+											<input type="file" name="blogpost_file_edit" id="blogpost_file_edit_<%= [i] %>" class="blogpost_file_edit">
 
-											<label for="filename_edit" class="hide">
+											<label for="filename_edit_<%= [i] %>" class="hide">
 												uploaded file
 											</label>
-											<input type="text" id="filename_edit" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
+											<input type="text" id="filename_edit_<%= [i] %>" class="filename_edit" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
 										</div>
 									</div>
 									<footer>
@@ -174,16 +175,16 @@
 										<input type="checkbox" name="replaceFile" value="">
 										<label for="replaceFile"><% if (typeof lang == 'undefined' || lang == 'en') { %>Replace file <% } else if (lang == 'nl') { %>Bestand vervangen <% } %></label>
 										<div class="extra">
-											<label for="blogpost_file_edit" id="buttonlabel" class="edit_blog">
-												<span role="button" aria-controls="filename_edit" tabindex="0">
+											<label for="blogpost_file_edit<%= [i] %>" id="buttonlabel" class="edit_blog">
+												<span role="button" aria-controls="filename_edit_<%= [i] %>" tabindex="0">
 													<i class="fas fa-upload"></i><% if (typeof lang == 'undefined' || lang == 'en') { %>Choose a file..<% } else if (lang == 'nl') { %>Bestand kiezen..<% } %>
 												</span>
 											</label>
-											<input type="file" name="blogpost_file_edit" id="blogpost_file_edit">
-											<label for="filename_edit" class="hide">
+											<input type="file" name="blogpost_file_edit_<%= [i] %>" multiple id="blogpost_file_edit<%= [i] %>">
+											<label for="filename_edit_<%= [i] %>" class="hide">
 												uploaded file
 											</label>
-											<input type="text" id="filename_edit" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
+											<input type="text" id="filename_edit_<%= [i] %>" autocomplete="off" readonly placeholder="<% if (typeof lang == 'undefined' || lang == 'en') { %>No file selected, with this action you will overwrite the old upload(file)<% } else if (lang == 'nl') { %>Geen bestand geselecteerd , u overschrijft de vorige upload(bestand) hiermee.<% } %>">
 										</div>
 									</div>
 									<footer>
@@ -192,6 +193,7 @@
 
 
 									<!-- <pre>Date: <%= timeStampFormat %></pre> -->
+									<input type="hidden" name="blogpost_id" value="<%=  blog_posts[i]._id %>"/>
 									<input type="hidden" name="blogpost_unique_date" value="<%= uniqueTimeStamp %>"/>
 									<input type="hidden" name="blogpost_date" value="<%= timeStamp %>"/>
 									<input type="hidden" name="blogpost_date_format" value="<%= timeStampFormat %>"/>
@@ -208,6 +210,7 @@
 						<input type="hidden" name="blogpost_title" value="<%= blog_posts[i].blogpost_title %>">
 						<input type="hidden" name="blogpost_date" value="<%= blog_posts[i].blogpost_date %>">
 						<input type="hidden" name="blogpost_unique_date" value="<%= blog_posts[i].blogpost_unique_date %>">
+						<input type="hidden" name="blogpost_id" value="<%= blog_posts[i]._id %>">
 						<input type="submit" value="X">
 					</form>
 				<% } %>
@@ -363,44 +366,43 @@
 		</div>
 	</footer>
 	<script type="text/javascript">
+	$(document).ready(function() {
 
-	// Edit button - toggles form for that specific article(blog post)
-	var editButton = $('.blog_edit_button');
-	editButton.click(function() {
-		postForm = $(this).siblings('.blog_post_form');
-		currentForm = $(this).siblings('.currentForm');
-		postForm.toggleClass('closed');
-		currentForm.toggleClass('closed');
-	});
+		// TOGGLE EDIT FORM
+		var editButton = $('.blog_edit_button');
+		editButton.click(function() {
+			postForm = $(this).siblings('.blog_post_form');
+			currentForm = $(this).siblings('.currentForm');
+			postForm.toggleClass('closed');
+			currentForm.toggleClass('closed');
+		});
 
-	//Edit form UploadForm (blogpost edit post)
-	$('.extra #buttonlabel span[role=button]').bind('keypress keyup', function(e) {
-		console.log('click')
-	  if(e.which === 32 || e.which === 13){
-	    e.preventDefault();
-	    $('#blogpost_file_edit').click();
-	  }
-	});
-	// return chosen filename to additional input
-	$('#blogpost_file_edit').change(function(e) {
-	  var filename_edit = $('#blogpost_file_edit').val().split('\\').pop();
-		console.log(filename_edit)
-	  $('#filename_edit').val(filename_edit);
-	  $('#filename_edit').attr('placeholder', filename_edit);
-	  $('#filename_edit').focus();
-	});
+		//EDIT POST - FORM
+		$('.extra span[role=button]').on('keypress keyup click', function(e) {
+			var currentID = '#' + $(this).parent().siblings('input').attr('id');
+			console.log(currentID)
+			// console.log($(this).parent().siblings('.blogpost_file_edit'))
+		  // if(e.which === 32 || e.which === 13){
+			// 	e.preventDefault();
+			// 	$(this).parent().siblings('.blogpost_file_edit').click();
+		  // }
+			$(currentID).change(function(e) {
+			  var filename_edit = $(this).val().split('\\').pop();
+				var copyLabel = $(this).siblings('.filename_edit');
+			  $(copyLabel[0]).val(filename_edit);
+			  $(copyLabel[0]).attr('placeholder', filename_edit);
+			  $(copyLabel[0]).focus();
+			});
+		});
 
-
-
-
-	//Original UploadForm (blogpost post)
-	$('#buttonlabel span[role=button]').bind('keypress keyup', function(e) {
-		console.log('click')
-	  if(e.which === 32 || e.which === 13){
-	    e.preventDefault();
-	    $('#blogpost_file').click();
-	  }
-	});
+	//UPLOAD FORM - ORIGINAL
+	// $('#buttonlabel span[role=button]').bind('keypress keyup', function(e) {
+	// 	console.log('click')
+	//   if(e.which === 32 || e.which === 13){
+	//     e.preventDefault();
+	//     $('#blogpost_file').click();
+	//   }
+	// });
 	// return chosen filename to additional input
 	$('#blogpost_file').change(function(e) {
 	  var filename = $('#blogpost_file').val().split('\\').pop();
@@ -412,7 +414,7 @@
 
 	// if checkbox checked then show div > and post values for uploadfile
 	$('input[type="checkbox"]').change(function() {
-		console.log($(this))
+		// console.log($(this))
 		$(this).siblings('.extra').toggle();
 	});
 
@@ -433,6 +435,7 @@
 			toggleText();
 		});
 	});
+});
 </script>
 <script src=".././lib/domJSON.js"></script>
 <script type="text/javascript" src="../scripts/admin_cm.js"></script>
