--- a/chatbot/chatbot_nl/css/style.css
+++ b/chatbot/chatbot_nl/css/style.css
@@ -40,7 +40,7 @@ header  {
 	/* background:#15822F;
 	background:#2B9A44; */
   padding: .5em 0;
-	text-align:center;
+	text-align: left;
 }
 main {
 	/* padding-bottom: 41px; */
