--- a/public/style/style.css
+++ b/public/style/style.css
@@ -16,9 +16,9 @@
 	display: block;
 	width: 100%;
 	height: 80%;
-	opacity: .8;
 	z-index: 9999;
 	padding:1em 5em ;
+  opacity: .9;
 }
 .cookieWall button {
 	height: 42px;
@@ -1331,6 +1331,11 @@ input[type="checkbox"] label[for="replaceFile"] {
 	}
 	.shortForm {
 		max-width:218px;
+	}
+	div.login {
+		position: absolute;
+		right: 23px;
+		top: 48px;
 	}
 }
 
