--- a/views/login.html
+++ b/views/login.html
@@ -156,6 +156,7 @@
 							<i class="fas fa-eye field-icon"></i>
 						</div>
 						<!-- <span toggle="#password-field" class="fas fa-fw fa-eye field-icon toggle-password"></span> -->
+						<span class="errorMessage"><%= errorMessage %></span>
 				</div>
 				<input type="submit" name="button" value="login">
 			</form>
