--- a/views/index.html
+++ b/views/index.html
@@ -217,7 +217,7 @@
 </script>
 <script src="./lib/domJSON.js"></script>
 <!-- <script type="text/javascript" src="/scripts/admin_cm.js"></script> -->
-<script type="text/javascript" src="/scripts/cookieWall.js"></script>
+<script type="text/javascript" src="/scripts/cookiewall.js"></script>
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
